Fix card content padding overflowing on the right
The text wrapper was width:100% + 25px padding without border-box, so it
was 50px wider than the card and the right padding was clipped by the
card's overflow:hidden. Add box-sizing: border-box.

--- a/_sass/modules/_reference-apps.scss
+++ b/_sass/modules/_reference-apps.scss
@@ -48,6 +48,7 @@
   }
 
   &__text {
+    box-sizing: border-box;
     padding: 25px;
     text-align: left;
     width: 100%;
